--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,19 @@
 #
 # To learn more, please read the Rails Internationalization guide
 # available at https://guides.rubyonrails.org/i18n.html.
+en:
 
 en:
   hello: "Hello world"
+  will_paginate:
+    page_entries_info:
+      single_page:
+        zero:  “No %{model} found”
+        one:   “Displaying 1 %{model}”
+        other: “todas %{count} %{model}”
+      single_page_html:
+        zero:  “No %{model} found”
+        one:   “Displaying <b>1</b> %{model}”
+        other: “Displaying <b>all&nbsp;%{count}</b> %{model}”
+      multi_page: “Displaying %{model} %{from} - %{to} of %{count} in total”
+      multi_page_html: “Displaying %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> of <b>%{count}</b> in total”
